crates/xlate/tests/snapshots/golden_matrix__reason_effort_xhigh__o4-mini__20260910__chat_to_responses__gpt4o.snap
---
source: crates/xlate/tests/golden_matrix.rs
expression: rendered
---
--- body ---
{
  "model": "gpt-4o",
  "input": [
    {
      "type": "message",
      "role": "user",
      "content": [
        {
          "type": "input_text",
          "text": "What is the 10th Fibonacci number?"
        }
      ]
    }
  ],
  "max_output_tokens": 256
}
--- headers ---
content-type: application/json
upstream_streams: false
--- degraded ---
reasoning=dropped
